--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       margin-bottom: 15px;
     }
 
-    .card-title h3 {
+    .card-title h1 {
       font-family: 'Fraunces', serif;
       color: var(--neutral-dark-blue);
       font-size: 2rem;
@@ -173,7 +173,7 @@
   </style>
 </head>
 <body>
-  <div class="card-container">
+  <div class="card-container" role="main">
     <div class="card-row">
       <div class="card-col">
         <div class="card-image"></div>
@@ -184,7 +184,7 @@
             <h5>perfume</h5>
           </div>
           <div class="card-title">
-            <h3>Gabrielle Essence Eau De Parfum</h3>
+            <h1>Gabrielle Essence Eau De Parfum</h1>
           </div>
           <div class="card-desc">
             <p>A floral, solar and voluptuous interpretation composed by Olivier Polge, Perfumer-Creator for the House of CHANEL.</p>
