--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
           <div class="card-prices">
             <span class="card-price-disc">$149.99</span> <span class="card-price">$169.99</span>
           </div>
-          <a href="#" class="btn btn-primary" rel="noreferer" target="_self"><img src="./images/icon-cart.svg" alt="cart"> <span>Add to Cart</span></a>
+          <a href="#" class="btn btn-primary"><img src="./images/icon-cart.svg" alt="cart"> <span>Add to Cart</span></a>
         </div>
       </div>
     </div>
@@ -212,7 +212,7 @@
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="https://www.linkedin.com/in/putu-bajra-39a212b0/" rel="norefere" target="_blank">Bajra</a>.
+    Coded by <a href="https://www.linkedin.com/in/putu-bajra-39a212b0/" target="_blank">Bajra</a>.
   </div>
 </body>
 </html>
