--- a/index.html
+++ b/index.html
@@ -173,46 +173,37 @@
   </style>
 </head>
 <body>
-  <div class="card-container" role="main">
-    <div class="card-row">
-      <div class="card-col">
-        <div class="card-image"></div>
-      </div>
-      <div class="card-col">
-        <div class="card-details">
-          <div class="card-subtitle">
-            <h5>perfume</h5>
+  <main>
+    <div class="card-container" role="main">
+      <div class="card-row">
+        <div class="card-col">
+          <div class="card-image"></div>
+        </div>
+        <div class="card-col">
+          <div class="card-details">
+            <div class="card-subtitle">
+              <h5>perfume</h5>
+            </div>
+            <div class="card-title">
+              <h1>Gabrielle Essence Eau De Parfum</h1>
+            </div>
+            <div class="card-desc">
+              <p>A floral, solar and voluptuous interpretation composed by Olivier Polge, Perfumer-Creator for the House of CHANEL.</p>
+            </div>
+            <div class="card-prices">
+              <span class="card-price-disc">$149.99</span> <span class="card-price">$169.99</span>
+            </div>
+            <a href="#" class="btn btn-primary"><img src="./images/icon-cart.svg" alt="cart"> <span>Add to Cart</span></a>
           </div>
-          <div class="card-title">
-            <h1>Gabrielle Essence Eau De Parfum</h1>
-          </div>
-          <div class="card-desc">
-            <p>A floral, solar and voluptuous interpretation composed by Olivier Polge, Perfumer-Creator for the House of CHANEL.</p>
-          </div>
-          <div class="card-prices">
-            <span class="card-price-disc">$149.99</span> <span class="card-price">$169.99</span>
-          </div>
-          <a href="#" class="btn btn-primary"><img src="./images/icon-cart.svg" alt="cart"> <span>Add to Cart</span></a>
         </div>
       </div>
     </div>
-  </div>
-
-  <!-- Preview
-
-  Gabrielle Essence Eau De Parfum
-
-  A floral, solar and voluptuous interpretation composed by Olivier Polge, 
-  Perfumer-Creator for the House of CHANEL.
-
-  $149.99
-  $169.99
-
-  Add to Cart -->
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="https://www.linkedin.com/in/putu-bajra-39a212b0/" target="_blank">Bajra</a>.
-  </div>
+  </main>
+  <footer>
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="https://www.linkedin.com/in/putu-bajra-39a212b0/" target="_blank">Bajra</a>.
+    </div>
+  </footer>  
 </body>
 </html>
