--- a/index.html
+++ b/index.html
@@ -173,8 +173,8 @@
   </style>
 </head>
 <body>
-  <main>
-    <div class="card-container" role="main">
+  <main role="main">
+    <div class="card-container">
       <div class="card-row">
         <div class="card-col">
           <div class="card-image"></div>
