--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
   </style>
 </head>
 <body>
-  <main role="main">
+  <main>
     <div class="card-container">
       <div class="card-row">
         <div class="card-col">
