--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
         <div class="card-col">
           <div class="card-img-container">
             <picture>
-              <source media="(min-width:768px)" srcset="./images/image-product-desktop.jpg 768w">
+              <source media="(min-width:768px)" srcset="./images/image-product-desktop.jpg">
               <img src="./images/image-product-mobile.jpg" alt="Gabrielle Parfum">
             </picture>
           </div>
